# Seifenkistenrennen

./: LICENSE  Readme.md
Frontend/: .gitignore  index.html  package-lock.json
Frontend/src/: App.tsx  env.d.ts  types.ts
Frontend/src/components/: Layout.tsx  ProtectedRoute.tsx
Frontend/src/contexts/: AuthContext.tsx  useAuth.ts
Frontend/src/hooks/: useSessionState.ts
Frontend/src/pages/: AdminDashboardPage.tsx  AdminLoginPage.tsx  AdminManageRacesPage.tsx  Home.tsx  HomePage.tsx  NotFoundPage.tsx  (+1 more)
PyClient/: .gitignore  app_settings.json  main_app.py  requirements.txt  scanner_app.py  tests.py
PyClient/main_app/: app.py  app_settings.json  main_app.py  run_times.json
PyClient/moderator_app/: moderator_app.py
PyClient/scanner_app/: scan_app.py  scanner_app.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/race_core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/race_core/management/commands/: create_initial_superuser.py
backend/race_core/migrations/: 0001_initial.py  0002_remove_racer_date_of_birth_racer_created_at_and_more.py  0003_alter_racerun_recorded_at.py  0004_soapbox_racer_soapbox.py  0005_alter_soapbox_name.py  0006_alter_racer_soapbox_class.py
backend/race_core/tests/: test_admin_methods.py  test_api_base.py  test_api_racers.py  test_api_raceruns.py  test_api_teams.py  test_models.py  test_serializers_read.py  test_serializers_write.py
(+14 files in other folders)
