[project]
name = "backend"
version = "0.1.0"
description = "Eine Website, um die Ergebnisse eines Seifenkistenrennens einzutragen und zu verfolgen."
authors = [
    {name = "Max Mustermann",email = "max.megamustermann@gmail.com"}
]
license = {text = "MIT"}
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg[binary,pool] (>=3.2.9,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "django-filter (>=25.1,<26.0)",
    "whitenoise[brotli] (>=6.9.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
